Wek 1 Blog Post & the 1st paragraph of my blog post

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    Hey, My name is Seren
+    WEEK 1 - BLOG POST
+    My experience setting up my GitHub was relatively easy, seeing as I already have a GitHub 
+    account and I have experience committing my work onto a repository from last year. What I 
+    did have trouble with was adapting that knowledge to a new software like Visual Studio
+    Code. Though we did get a step by step guide on how to get Visual Studio Code set up, I did 
+    feel out of my depth trying to get used to how this software works, and getting familiar with
+    the new coding language and its layout. Having a tutor walk me through the whole process
+    again and showing me where I went wrong, definitely made the whole process a lot easier
+    and faster. I feel a lot more comfortable with committing my changes for VSCode to Github now.
 </body>
 </html>
