Fixed spacing and 1st line of 2nd paragraph

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     WEEK 1 - BLOG POST
+    
     My experience setting up my GitHub was relatively easy, seeing as I already have a GitHub 
     account and I have experience committing my work onto a repository from last year. What I 
     did have trouble with was adapting that knowledge to a new software like Visual Studio
@@ -15,5 +16,7 @@
     the new coding language and its layout. Having a tutor walk me through the whole process
     again and showing me where I went wrong, definitely made the whole process a lot easier
     and faster. I feel a lot more comfortable with committing my changes for VSCode to Github now.
+
+    One of the readings I had selected was “Flash and its History on the Web” by Jay. This article
 </body>
 </html>
