Changed the title, addded a link to homepage in bloghomepage, Added Week 2 Blog Post, Added Image of homepage Wireframe

--- a/Blogs/Week2-BlogPost.html
+++ b/Blogs/Week2-BlogPost.html
@@ -1,24 +1,86 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Week 2 Blog Post</title>
-    </head>
+  <head>
+    <title>Week 2 Blog Post</title>
+  </head>
 
+  <body>
+    <h1>Week 2 Blog Post</h1>
+  </body>
+  <section>
+    <h2>Moulthrop’s Essay & How it Speaks to the Interenet Today</h2>
     <body>
-        <h1>Week 2 Blog Post</h1> 
+      <p>
+        Moulthrop’s essay, ‘You Say You Want a Revolution? Hypertext and the
+        Laws of Media’ speaks directly to the evolution of the internet today,
+        even though it was written before the modern web took shape. His essay
+        discusses hypertext as a revolutionary medium that was expected to upend
+        traditional information hierarchies, decentralize authority, and create
+        a more democratic exchange of ideas. Moulthrop notes that early
+        hypertext theorists like Ted Nelson envisioned a dynamic, open, and
+        participatory network. However, instead of a decentralized utopia, large
+        corporations (Yahoo, CNN, etc.) become the dominant sources of
+        information. Today this is even more relevant with tech giants like
+        Google, Meta, Amazon, and Apple being in charge of a large majority of
+        people’s personal information. The internet is no longer the free, open
+        space early pioneers imagined, but rather a tightly managed corporate
+        landscape.
+      </p>
+      <p>
+        Moulthrop also discusses how hypertext was supposed to liberate readers
+        from linear, book-like experiences and empower them to create their own
+        pathways of knowledge. While the internet offers interconnected
+        information, a lot of it is algorithmically curated, which limits
+        genuine exploration. Instead of purely text-based exploration, the
+        internet today is dominated by multimedia-video content, gaming and
+        immersive digital experiences, Moulthrop foreshadows this shift, by
+        mentioning MP3 swapping, multiplayer games, and instant messaging as
+        early examples of how hypertext would evolve beyond just textual links
+      </p>
+      <p>
+        Moulthrop’s insights remain strikingly relevant today. The internet has
+        followed the trajectory he predicted, because instead of breaking away
+        from traditional power structures, it has often reinforced them. While
+        hypertext and digital media have transformed communication, they have
+        also been co-opted by economic and political forces. His work encourages
+        a critical reflection on whether today’s internet is truly revolutionary
+        or just a continuation of systems in new forms.
+      </p>
+
+      <h3>Folder Structure & URL Scheme</h3>
+      <p>
+        What I'm hoping for in the first phase of my website is for it to be
+        simple and functional. Eventually, as I get more comfortable with the
+        coding languages, I want my website to be a lot more vibrant and
+        animated. I want it to be reminiscent of cartoon websites in the early
+        2ooo's. I would like my webpage portfolio to be representative of my
+        creative passions, whilst also being functional, well-structured and
+        organized
+      </p>
+
+      <h4>Inspirations for My Website</h4>
+      <section>
+        <nav>
+          <ul>
+            <li>
+              <a href="https://carbonmade.com/portfolios/animation"
+                >Carbonmade: Aniamtion Portfolios</a
+              >
+            </li>
+            <li><a href="https://bryantcodes.art/">Bryant's Webpage</a></li>
+            <li><a href="https://peteroravec.com/">Peter's Webpage</a></li>
+            <li>
+              <a
+                href="https://oninross.github.io/infinite-imaginations/#/coding/"
+                >Infinite-imaginations Webpage</a
+              >
+            </li>
+            <li>
+              <a href="https://00s.myretrotvs.com/#">My Retro TV Webpage</a>
+            </li>
+          </ul>
+        </nav>
+      </section>
     </body>
-    <section>
-        <h2>Moulthrop’s Essay & How it Speaks to the Interenet Today</h2>
-       <body>
-        <p>Moulthrop’s essay, ‘You Say You Want a Revolution? Hypertext and the Laws of Media’ speaks directly to the evolution of the internet today, even though it was written before the modern web took shape. His essay discusses hypertext as a revolutionary medium that was expected to upend traditional information hierarchies, decentralize authority, and create a more democratic exchange of ideas. Moulthrop notes that early hypertext theorists like Ted Nelson envisioned a dynamic, open, and participatory network. However, instead of a decentralized utopia, large corporations (Yahoo, CNN, etc.) become the dominant sources of information. Today this is even more relevant with tech giants like Google, Meta, Amazon, and Apple being in charge of a large majority of people’s personal information. The internet is no longer the free, open space early pioneers imagined, but rather a tightly managed corporate landscape. 
-        </p>
-        <p>Moulthrop also discusses how hypertext was supposed to liberate readers from linear, book-like experiences and empower them to create their own pathways of knowledge. While the internet offers interconnected information, a lot of it is algorithmically curated, which limits genuine exploration. Instead of purely text-based exploration, the internet today is dominated by multimedia-video content, gaming and immersive digital experiences, Moulthrop foreshadows this shift, by mentioning MP3 swapping, multiplayer games, and instant messaging as early examples of how hypertext would evolve beyond just textual links</p>
-        <p>Moulthrop’s insights remain strikingly relevant today. The internet has followed the trajectory he predicted, because instead of breaking away from traditional power structures, it has often reinforced them. While hypertext and digital media have transformed communication, they  have also been co-opted by economic and political forces. His work encourages a critical reflection on whether today’s internet is truly revolutionary or just a continuation of systems in new forms. 
-        </p> 
-       
-        <h2>Wireframes</h2>
-       </body> 
-    </section>
-
-
+  </section>
 </html>
