--- a/Blogs/BlogHomePage.html
+++ b/Blogs/BlogHomePage.html
@@ -6,13 +6,14 @@
 </html>
 
 <body>
-    <section>
-        <header class="page header"><h2>Weekly Blog Posts</h2></header>
-        <nav>
-            <ul>
-                <li><a href="Week1-BlogPost.html">Week 1 Blog Post</a></li>
-                <li><a href="Week2-BlogPost.html">Week 2 Blog Post</a></li>
-            </ul>
-        </nav>
-    </section>
+  <section>
+    <header class="page header"><h2>Weekly Blog Posts</h2></header>
+    <nav>
+      <ul>
+        <li><a href="/index.html">Home Page</a></li>
+        <li><a href="Week1-BlogPost.html">Week 1 Blog Post</a></li>
+        <li><a href="Week2-BlogPost.html">Week 2 Blog Post</a></li>
+      </ul>
+    </nav>
+  </section>
 </body>
