--- a/index.html
+++ b/index.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seren's Website</title>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Seren's Portfolio Webpage</title>
+  </head>
 
-<body>
+  <body>
     <section>
-        <header class="page-header"><h2>This is Seren's website</h2></header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="blogs/BlogHomePage.html">Blog Page</a></li>
-            </ul>
-        </nav>
+      <header class="page-header"><h2>This is Seren's website</h2></header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="blogs/BlogHomePage.html">Blog Page</a></li>
+        </ul>
+      </nav>
     </section>
-</body>
+  </body>
 </html>
 
-<h1>
-    Welcome!
-</h1>
+<h1>Welcome!</h1>
 <section>
-    <h2>My Name is Seren</h2>
-    <body>
-        Talk about yourself add images, etc, etc. 
-    </body>
+  <h2>My Name is Seren</h2>
+  <body>
+    Talk about yourself add images, etc, etc.
+  </body>
 </section>
