Added Images, Week 3 blog Post & stuff

--- a/index.html
+++ b/index.html
@@ -7,22 +7,17 @@
   </head>
 
   <body>
-    <section>
-      <header class="page-header"><h2>This is Seren's website</h2></header>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="blogs/BlogHomePage.html">Blog Page</a></li>
-        </ul>
-      </nav>
-    </section>
+    <header class="page-header"><h2>This is Seren's website</h2></header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="blogs/BlogHomePage.html">Blog Page</a></li>
+      </ul>
+    </nav>
+    <main>
+      <h1>Welcome!</h1>
+      <h2>My Name is Seren</h2>
+      <p>Talk about yourself add images, etc, etc.</p>
+    </main>
   </body>
 </html>
-
-<h1>Welcome!</h1>
-<section>
-  <h2>My Name is Seren</h2>
-  <body>
-    Talk about yourself add images, etc, etc.
-  </body>
-</section>
