--- a/Blogs/BlogHomePage.html
+++ b/Blogs/BlogHomePage.html
@@ -13,6 +13,7 @@
         <li><a href="/index.html">Home Page</a></li>
         <li><a href="Week1-BlogPost.html">Week 1 Blog Post</a></li>
         <li><a href="Week2-BlogPost.html">Week 2 Blog Post</a></li>
+        <li><a href="Week 3-BlogPost.html">Week 3 Blog Post</a></li>
       </ul>
     </nav>
   </section>
