--- a/Blogs/Week2-BlogPost.html
+++ b/Blogs/Week2-BlogPost.html
@@ -81,6 +81,9 @@
           </ul>
         </nav>
       </section>
+      <ul>
+        <a href="BlogHomePage.html"> &lt;&ndash; Return </a>
+      </ul>
     </body>
   </section>
 </html>
