--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="Blogs/BlogHomePage.html">Blogs</a></li>
+        <li><a href="BlogHomePage.html">Blogs</a></li>
       </ul>
     </nav>
     <main>
