Added a Home Folder, Tried to fix the homepage link in the blog page, ended up breaking 2 links

--- a/Home/index.html
+++ b/Home/index.html
@@ -10,7 +10,7 @@
     <header class="page-header"><h2>This is Seren's website</h2></header>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="Home/index.html"></a></li>
         <li><a href="Blogs/BlogHomePage.html">Blogs</a></li>
       </ul>
     </nav>
