--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header class="page-header"><h2>This is Seren's website</h2></header>
     <nav>
       <ul>
-        <li><a href="Home/index.html"></a></li>
-        <li><a href="Blogs/BlogHomePage.html">Blogs</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="../BlogHomePage.html">Blogs</a></li>
       </ul>
     </nav>
     <main>
