Fixing Blog Home Page Links

--- a/Blogs/BlogHomePage.html
+++ b/Blogs/BlogHomePage.html
@@ -10,7 +10,7 @@
     <header class="page header"><h2>Weekly Blog Posts</h2></header>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="../index.html">Home</a></li>
         <li><a href="Week1-BlogPost.html">Week 1 Blog Post</a></li>
         <li><a href="Week2-BlogPost.html">Week 2 Blog Post</a></li>
         <li><a href="Week 3-BlogPost.html">Week 3 Blog Post</a></li>
