Added 3 Paragraphs to Week 3 blog page

--- a/Blogs/Week 3-BlogPost.html
+++ b/Blogs/Week 3-BlogPost.html
@@ -29,5 +29,10 @@
         <li><a href="https://www.webdesignmuseum.org/gallery/cartoon-network-in-2005">Cartoon Network (2005)</a></li>
       </ul>
     </p>
+
+    <p>My target audience for this webpage portfolio, is for potential employers & colleagues to view my portfolio and for them to get to know me as a creative. I want them to get an idea of what I offer as an animator/writer just from them going through my webpages and seeing the library of animations and writing content I have listed. What my user would want to see on my webpage is an accumulation of works I've done as a self-proclaimed writer and animator, and for them to look at my work and be able to decide whether or not they would want me to work for/with them. </p>
+    <p>The type of content I know I would like to have on my web page is, one, a portfolio section that's divided up into multiple sections that consist of: an animation or story board section, a section just for my drawings, and a section for my writing. The most important parts of my webpage, as per this module however, would be my blog page, my design page (that consists of all my wireframes) and an essay section. This is not something I think people would find interesting about my webpage, what I think people would find interesting would be the animations and styling I would like to add when we get into CSS.</p>
+    <p>The way in which the above texts would relate to what I know about semantic mark ups is that the use of HTML would focus more on the bare bones structure of the webpage, they are made to make the webpage accessible on the web clause. It is essential that the code is easy to read, this is made possible through ensuring that when tags are being used they should be used for practical, and not stylistic purposes. Like the tags "<e></e>" or "<strong></strong>" look like italics/bold texts on the webpage but it is used to communicate to the server that these specific words need to be emphasized; though it is possible for you to make stylistic changes to words in HTML it is advised you leave stylistic choices to CSS.</p>
+    
   </section>
 </html>
