Added Wek 4 Blog Page & Editing of Week 1 Blog Page

--- a/Blogs/Week1-BlogPost.html
+++ b/Blogs/Week1-BlogPost.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Week 1 Blog Page</title>
+    <title>Week 1 Blog Post</title>
   </head>
   <body>
     <h1>Week 1 Blog Post</h1>
