Week 4 Heading Blog

--- a/Blogs/Week 4-BlogPost.html
+++ b/Blogs/Week 4-BlogPost.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Week 4 Blog Post</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Week 4 Blog Post</h1>
+  </body>
 </html>
