Week 4 Blog Post Link onto blog homepage

--- a/Blogs/BlogHomePage.html
+++ b/Blogs/BlogHomePage.html
@@ -14,6 +14,7 @@
         <li><a href="Week1-BlogPost.html">Week 1 Blog Post</a></li>
         <li><a href="Week2-BlogPost.html">Week 2 Blog Post</a></li>
         <li><a href="Week 3-BlogPost.html">Week 3 Blog Post</a></li>
+        <li><a href="Week 4-BlogPost.html">Week 4 Blog Post</a></li>
       </ul>
     </nav>
   </section>
