Content added to Week 4 blog Page & a return button has been added to Wek 3 blog page

--- a/Blogs/Week 3-BlogPost.html
+++ b/Blogs/Week 3-BlogPost.html
@@ -35,4 +35,7 @@
     <p>The way in which the above texts would relate to what I know about semantic mark ups is that the use of HTML would focus more on the bare bones structure of the webpage, they are made to make the webpage accessible on the web clause. It is essential that the code is easy to read, this is made possible through ensuring that when tags are being used they should be used for practical, and not stylistic purposes. Like the tags "<e></e>" or "<strong></strong>" look like italics/bold texts on the webpage but it is used to communicate to the server that these specific words need to be emphasized; though it is possible for you to make stylistic changes to words in HTML it is advised you leave stylistic choices to CSS.</p>
     
   </section>
+  <ul>
+    <a href="BlogHomePage.html"> &lt;&ndash; Return </a>
+  </ul>
 </html>
