--- a/Blogs/Week 4-BlogPost.html
+++ b/Blogs/Week 4-BlogPost.html
@@ -5,7 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Week 4 Blog Post</title>
   </head>
+
   <body>
     <h1>Week 4 Blog Post</h1>
   </body>
+  <section>
+    <h2>My Journey With HTML Structure:</h2>
+    <p>
+      The initial phases of me working through my website, using HTML was fairly
+      easy. This was in part due to the fact that I had kept up with the
+      tutorial and lectures on how to go about setting it up, this made
+      structuring the bones of the website a lot simpler. The more challenging
+      aspect of working with HTML came when delving deeper into the
+      functionality of the website and making sure everything was working
+      correctly. This is where I got critiques on my structuring, and the
+      functionality of my links (or lack thereof).
+    </p>
+
+    <h2>What I've Struggled With:</h2>
+    <p>
+      Something that I found was a huge struggle when working on my website,
+      were my links. Specifically the links to the index/home, and blog home
+      page. This was particularly scary to have to deal with seeing as they are
+      a huge part of the website and if viewers cannot access my homepage, there
+      is no website; similarly if they cannot access my blog home page they
+      would not be able to view the contents of my blog posts.
+    </p>
+    <p>
+      I think this problem came about because initially, when I was setting up
+      these links, I would only check their functionality through Live Server
+      and not through my GitHub Repository. This gave me the impression that
+      everything was working fine, additionally when starting out, I had no real
+      understanding of root folders and how they worked. Meaning that I had
+      failed to include the required folder when inserting the links.
+    </p>
+
+    <h2>IxD Process:</h2>
+    <h3>Discovering User Needs:</h3>
+    <h3>Defining Interaction Patterns:</h3>
+    <h3>Developing the Framework:</h3>
+    <h3>Refining the Exprience:</h3>
+  </section>
 </html>
