Week 4: What I'm Proud of & What I look forward to

--- a/Blogs/Week 4-BlogPost.html
+++ b/Blogs/Week 4-BlogPost.html
@@ -45,5 +45,50 @@
     <h3>Defining Interaction Patterns:</h3>
     <h3>Developing the Framework:</h3>
     <h3>Refining the Exprience:</h3>
+
+    <h2>What I'm Proud of:</h2>
+    <p>
+      What I’m most proud of when it comes to my webpage is, admittedly, my blog
+      page section. I’m very pleased with the way it is structured and how
+      organized it is. I’ve added a return link within each blog post, that
+      takes the viewer back to the Blog Home Page. I learnt about entities and
+      used them for the arrows for the Return button. I’ve put a lot of thought
+      and implemented a lot of my knowledge from class when building this
+      section, and seeing all of that work present in these pages makes me
+      really excited to see how it’ll look once I add other stylistic elements
+      to it.
+    </p>
+
+    <h2>Change for the Future</h2>
+    <p>
+      I plan on implementing a more structured navigation bar. As of right now I
+      feel as though my navigation is lacking in a lot of elements and like it
+      isn’t really structured in a way that will help viewers efficiently
+      navigate through my website.
+    </p>
+    <p>
+      Another thing that I would like to add onto my website is a lot more
+      descriptions, especially on the Home Page, I feel like it would add a lot
+      more personality to the website and for it to feel more personalised,
+      along with that sentiment, I think adding more images would help in
+      achieving that goal
+    </p>
+
+    <h2>What I'd Like do Moving Forward:</h2>
+    <p>
+      Working on the structuring of HTML has taught me a lot of background
+      knowledge on the importance of semantic markups and what it means for a
+      website to be functional. What I’m excited about in the future is working
+      with CSS. I'm looking forward to implementing a consistent colour scheme
+      throughout my website, in order to bring more life and personality to my
+      website. I think this would help elevate the website and help it move away
+      the very structured look that HTML gives. Another thing I’m looking
+      forward to when working with Java Script is adding animations and scroll
+      buttons to my website. I think this would really help make the website a
+      lot more interactive
+    </p>
   </section>
+  <ul>
+    <a href="BlogHomePage.html"> &lt;&ndash; Return </a>
+  </ul>
 </html>
