Added Metadata and microformats during consult. Added Image & Image source

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Seren's Portfolio Webpage</title>
+    <meta name="=author" content="Seren" />
   </head>
 
   <body>
-    <header class="page-header"><h2>This is Seren's website</h2></header>
+    <header class="page-header"><h1>Welcome To Seren's Website</h1></header>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -15,9 +16,20 @@
       </ul>
     </nav>
     <main>
-      <h1>Welcome!</h1>
+      <h2>About Me!</h2>
+      <img
+        class="u-photo"
+        src="Images/PicCrewImage(Seren).png"
+        alt="Image of the creator of website"
+        width="500"
+        height="500"
+      />
       <h2>My Name is Seren</h2>
-      <p>Talk about yourself add images, etc, etc.</p>
+      <p>
+        My name is Seren, I'm a Digital Arts student majoring in Animation,
+        Writing and Interactive Media. I hope you enjoy getting to know more
+        about me through this webiste!
+      </p>
     </main>
   </body>
 </html>
