Added Links to the Design, Essay, and Portfolio Page

--- a/index.html
+++ b/index.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Seren's Portfolio Webpage</title>
-    <meta name="=author" content="Seren" />
+    <meta name="=author" content="Seren Mafunda" />
+    <meta
+      name="description"
+      content="A website developed for a class assignment to build my skills as a web designer."
+    />
   </head>
 
   <body>
     <header class="page-header"><h1>Welcome To Seren's Website</h1></header>
+
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="Blogs/BlogHomePage.html">Blogs</a></li>
+        <li><a href="Design/Design.html">Design</a></li>
+        <li><a href="Portfolio/Portfolio.html">Portfolio</a></li>
+        <li><a href="Essays/Essays.html">Essays</a></li>
       </ul>
     </nav>
     <main>
