--- a/index.html
+++ b/index.html
@@ -39,5 +39,9 @@
         about me through this webiste!
       </p>
     </main>
+
+    <footer>
+      <p>Proudly Brought to you By Seren Mafunda 2025</p>
+    </footer>
   </body>
 </html>
