Adding Metadata to Blog week post 1 and nav bar links

--- a/Blogs/Week1-BlogPost.html
+++ b/Blogs/Week1-BlogPost.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Week 1 Blog Post</title>
+    <meta name="author" content="Seren Mafunda" />
+    <meta name="description" content="Blog 1 Post for DIGA3008" />
   </head>
+
   <body>
+    <header>Website</header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="Blogs/BlogHomePage.html">Blogs</a></li>
+        <li><a href="Design/Design.html">Design</a></li>
+        <li><a href="Portfolio/Portfolio.html">Portfolio</a></li>
+        <li><a href="Essays/Essays.html">Essays</a></li>
+      </ul>
+    </nav>
     <h1>Week 1 Blog Post</h1>
     <p>
       My experience setting up my GitHub was relatively easy, seeing as I
