Attempt 2 at trying to fix Nav bar links (Week1)

--- a/Blogs/Week1-BlogPost.html
+++ b/Blogs/Week1-BlogPost.html
@@ -13,10 +13,10 @@
     <nav>
       <ul>
         <li><a href="../index.html">Home</a></li>
-        <li><a href="../Blogs/BlogHomePage.html">Blogs</a></li>
+        <li><a href="../Blogs/BlogHomePage.html">Blog</a></li>
+        <li><a href="../Essays/Essays.html">Essays</a></li>
         <li><a href="../Design/Design.html">Design</a></li>
         <li><a href="../Portfolio/Portfolio.html">Portfolio</a></li>
-        <li><a href="../Essays/Essays.html">Essays</a></li>
       </ul>
     </nav>
     <h1>Week 1 Blog Post</h1>
