--- a/Blogs/Week2-BlogPost.html
+++ b/Blogs/Week2-BlogPost.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Week 2 Blog Post</title>
+    <meta name="author" content="Seren Mafunda" />
+    <meta name="description" content="Blog 2 Post for DIGA3008" />
   </head>
 
   <body>
+    <header>Website</header>
+    <nav>
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../Blogs/BlogHomePage.html">Blog</a></li>
+        <li><a href="../Essays/Essays.html">Essay</a></li>
+        <li><a href="../Design/Design.html">Design</a></li>
+        <li><a href="../Portfolio/Portfolio.html">Portfolio</a></li>
+      </ul>
+    </nav>
     <h1>Week 2 Blog Post</h1>
   </body>
   <section>
