--- a/Blogs/Week 3-BlogPost.html
+++ b/Blogs/Week 3-BlogPost.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Week 3 Blog Post</title>
+    <meta name="author" content="Seren Mafunda" />
+    <meta name="description" content="Blog 3 Post for DIGA3008" />
   </head>
 
   <body>
+    <header>Website</header>
+    <nav>
+      <li><a href="../index.html">Home</a></li>
+      <li><a href="../Blogs/BlogHomePage.html">Blogs</a></li>
+      <li><a href="../Essays/Essays.html">Essay</a></li>
+      <li><a href="../Design/Design.html">Design</a></li>
+      <li><a href="../Portfolio/Portfolio.html">Portfolio</a></li>
+    </nav>
+    <main>
     <h1>Week 3 Blog Posts</h1>
-  </body>
   <section>
     <h2>Mapping Out My Site's Content, Experience, and Interface</h2>
     <p>
@@ -38,4 +48,9 @@
   <ul>
     <a href="BlogHomePage.html"> &lt;&ndash; Return </a>
   </ul>
+</main>
+  <footer>
+    <p>Proudly Brought to you By Seren Mafunda</p>
+  </footer>
+</body>
 </html>
