Design page mircroformating and links & editting headers for the blog pages

--- a/Blogs/Week 3-BlogPost.html
+++ b/Blogs/Week 3-BlogPost.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <header>Website</header>
+    <header>Seren's Blog Page</header>
     <nav>
       <li><a href="../index.html">Home</a></li>
       <li><a href="../Blogs/BlogHomePage.html">Blogs</a></li>
