--- a/Blogs/Week 4-BlogPost.html
+++ b/Blogs/Week 4-BlogPost.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <header>Website</header>
+    <header>Seren's Blog Page</header>
     <nav>
       <ul>
         <li><a href="../index.html">Home</a></li>
@@ -64,9 +64,29 @@
 
           <h2>IxD Process:</h2>
           <h3>Discovering User Needs:</h3>
-          <h3>Defining Interaction Patterns:</h3>
+          <p>
+            Being aware of user needs has helped me structure my website more
+            efficiently. Knowing what I would like users to do or see in my
+            website, ensures that I included information that was relevant to
+            their needs.
+          </p>
           <h3>Developing the Framework:</h3>
+          <p>
+            The way I kept user experience in mind when developing my framework
+            was by making sure that I had well structured pages. I ensured that
+            my work would be able to be picked up by the crawlers and I did this
+            by ensuring that I had included as much microformats and metadata as
+            possible. This I feel would make finding my website easier, and it's
+            clear formatting would make it easier to navigate.
+          </p>
           <h3>Refining the Exprience:</h3>
+          <p>
+            The way I chose to refine my user experience was by ensuring that I
+            had a well organized website. I wanted to ensure that all the
+            related work had been grouped together. I believe that the structure
+            of a website plays an important role in user experience, I think as
+            soon as a website gets confusing that is when users leave.
+          </p>
 
           <h2>What I'm Proud of:</h2>
           <p>
