--- a/Blogs/Week2-BlogPost.html
+++ b/Blogs/Week2-BlogPost.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <header>Website</header>
+    <header>Seren's Blog Page</header>
     <nav>
       <ul>
         <li><a href="../index.html">Home</a></li>
