moving the nav bar into the header

--- a/Blogs/Week1-BlogPost.html
+++ b/Blogs/Week1-BlogPost.html
@@ -9,16 +9,18 @@
   </head>
 
   <body>
-    <header>Seren's Blog Page</header>
-    <nav>
-      <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../Blogs/BlogHomePage.html">Blog</a></li>
-        <li><a href="../Essays/Essays.html">Essays</a></li>
-        <li><a href="../Design/Design.html">Design</a></li>
-        <li><a href="../Portfolio/Portfolio.html">Portfolio</a></li>
-      </ul>
-    </nav>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../Blogs/BlogHomePage.html">Blog</a></li>
+          <li><a href="../Essays/Essays.html">Essays</a></li>
+          <li><a href="../Design/Design.html">Design</a></li>
+          <li><a href="../Portfolio/Portfolio.html">Portfolio</a></li>
+        </ul>
+      </nav>
+    </header>
+
     <main>
       <article class="h-entry">
         <h1 class="p-name">Week 1 Blog Post</h1>
