--- a/Blogs/Week2-BlogPost.html
+++ b/Blogs/Week2-BlogPost.html
@@ -9,15 +9,17 @@
   </head>
 
   <body>
-    <header>Seren's Blog Page</header>
-    <nav>
-      <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../Blogs/BlogHomePage.html">Blog</a></li>
-        <li><a href="../Essays/Essays.html">Essay</a></li>
-        <li><a href="../Design/Design.html">Design</a></li>
-        <li><a href="../Portfolio/Portfolio.html">Portfolio</a></li>
-      </ul>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../Blogs/BlogHomePage.html">Blog</a></li>
+          <li><a href="../Essays/Essays.html">Essay</a></li>
+          <li><a href="../Design/Design.html">Design</a></li>
+          <li><a href="../Portfolio/Portfolio.html">Portfolio</a></li>
+        </ul>
+    </header>
+    
     </nav>
     <main>
       <article class="h-entry">
