--- a/Blogs/BlogHomePage.html
+++ b/Blogs/BlogHomePage.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>All my Blogs on one page</title>
+    <meta name="=author" content="Seren Mafunda" />
+    <meta name="description" content="Blog Home Page for DIGA3008." />
   </head>
-</html>
 
-<body>
-  <section>
-    <header class="page header"><h2>Weekly Blog Posts</h2></header>
-    <nav>
-      <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="Week1-BlogPost.html">Week 1 Blog Post</a></li>
-        <li><a href="Week2-BlogPost.html">Week 2 Blog Post</a></li>
-        <li><a href="Week 3-BlogPost.html">Week 3 Blog Post</a></li>
-        <li><a href="Week 4-BlogPost.html">Week 4 Blog Post</a></li>
-      </ul>
-    </nav>
-  </section>
-</body>
+  <body>
+    <section>
+      <header class="page header"><h2>Weekly Blog Posts</h2></header>
+      <nav>
+        <ul>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="Week1-BlogPost.html">Week 1 Blog Post</a></li>
+          <li><a href="Week2-BlogPost.html">Week 2 Blog Post</a></li>
+          <li><a href="Week 3-BlogPost.html">Week 3 Blog Post</a></li>
+          <li><a href="Week 4-BlogPost.html">Week 4 Blog Post</a></li>
+        </ul>
+      </nav>
+    </section>
+  </body>
+</html>
