Adding links to the style guide and wireframes in the design homepage

--- a/Design/Design.html
+++ b/Design/Design.html
@@ -9,15 +9,31 @@
   </head>
 
   <body>
-    <header>Seren's Design Page</header>
-    <nav>
-      <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../Blogs/BlogHomePage.html">Blog</a></li>
-        <li><a href="../Essays/Essays.html">Essay</a></li>
-        <li><a href="../Design/Design.html">Design</a></li>
-        <li><a href="../Portfolio/Portfolio.html">Portfolio</a></li>
-      </ul>
-    </nav>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../Blogs/BlogHomePage.html">Blog</a></li>
+          <li><a href="../Essays/Essays.html">Essay</a></li>
+          <li><a href="../Design/Design.html">Design</a></li>
+          <li><a href="../Portfolio/Portfolio.html">Portfolio</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <header class="page-header"><h1>Welcome to My Design Section</h1></header>
+    <main>
+      <nav>
+        <h2 class="p-name">Take A Look At My Designs</h2>
+        <h3>
+          <li><a href="../Design/Style Guide.html">Style Guide</a></li>
+          <li><a href="../Design/Wireframe.html">WireFrames</a></li>
+        </h3>
+      </nav>
+    </main>
+
+    <footer>
+      <p>Proudly Brought to you By Seren Mafunda 2025</p>
+    </footer>
   </body>
 </html>
