Added Return Button to the style guide page

--- a/Design/Style Guide.html
+++ b/Design/Style Guide.html
@@ -68,9 +68,12 @@
         </p>
       </section>
 
-      <footer>
-        <p>Proudly Brought to you By Seren Mafunda 2025</p>
-      </footer>
+      <ul>
+        <a href="Design.html"> &lt;&ndash; Return </a>
+      </ul>
     </main>
+    <footer>
+      <p>Proudly Brought to you By Seren Mafunda 2025</p>
+    </footer>
   </body>
 </html>
