--- a/Design/Wireframe.html
+++ b/Design/Wireframe.html
@@ -37,7 +37,7 @@
               src="../Blogs/Images/AllWireframesOnOnePage.png"
               alt="Image Showing the Website Author's 1st WireFrame"
               class="u-photo"
-              width="700"
+              width="750"
               height="500"
             />
             <figcaption>Seren's 1st WireFrame</figcaption>
@@ -48,6 +48,8 @@
             17 March 2025
           </time>
         </section>
+
+        <section class="Wireframe"></section>
       </section>
     </main>
   </body>
