Starting to construct wireframe 2

--- a/Design/Wireframe.html
+++ b/Design/Wireframe.html
@@ -49,7 +49,16 @@
           </time>
         </section>
 
-        <section class="Wireframe"></section>
+        <section class="Wireframe">
+          <h2>My 2nd WireFrame</h2>
+          <p class="p-summary">
+            This is an updated version of my 1st wireframe. Aftr getting into
+            the flow of making a website, I realized a lot of what I planned for
+            it to look like isn't what I want anymore. So I got aquainted with
+            figma and have revamped my idea of what I want my website to look
+            like.
+          </p>
+        </section>
       </section>
     </main>
   </body>
