Completed Wireframe Page & Added a Navigation Header in the Blog Page

--- a/Blogs/BlogHomePage.html
+++ b/Blogs/BlogHomePage.html
@@ -10,6 +10,15 @@
 
   <body>
     <section>
+      <head>
+        <nav>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../Blogs/BlogHomePage.html">Blogs</a></li>
+          <li><a href="../Essays/Essays.html">Essay</a></li>
+          <li><a href="../Design/Design.html">Design</a></li>
+          <li><a href="../Portfolio/Portfolio.html">Portfolio</a></li>
+        </nav>
+      </head>
       <header class="page header"><h2>Weekly Blog Posts</h2></header>
       <nav>
         <ul>
