Added return button under wireframes, and other little bususes

--- a/Design/Wireframe.html
+++ b/Design/Wireframe.html
@@ -119,6 +119,10 @@
           </time>
         </section>
       </section>
+
+      <ul>
+        <a href="Design.html"> &lt;&ndash; Return </a>
+      </ul>
     </main>
     <footer>
       <p>Proudly Brought to you By Seren Mafunda 2025</p>
