--- a/Portfolio/Portfolio.html
+++ b/Portfolio/Portfolio.html
@@ -8,7 +8,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>CSS Testing Challenge</h1>
+    <h1>This is an Experiment Page</h1>
     <p>Blue Paragraph, 18px</p>
     <ul>
       <li>This is a list item with a square bullet point</li>
