--- a/Styles/CSS Fundamentals/index.html
+++ b/Styles/CSS Fundamentals/index.html
@@ -10,8 +10,9 @@
   <body>
     <nav>
       <label for="logo" class="logo">FoodFest</label>
+      <img src="" alt="" />
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="about.html">Products</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
