--- a/Styles/CSS Fundamentals/index.html
+++ b/Styles/CSS Fundamentals/index.html
@@ -10,7 +10,7 @@
   <body>
     <nav>
       <label for="logo" class="logo">FoodFest</label>
-      <img src="" alt="" />
+      <img src="Images/Seren's Character.png" id="logo" />
       <ul>
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="about.html">Products</a></li>
