--- a/Styles/CSS Fundamentals/index.html
+++ b/Styles/CSS Fundamentals/index.html
@@ -6,9 +6,18 @@
     <title>FoodFest</title>
     <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/dbf0b8b048.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <nav>
+      <input type="checkbox" id="check" />
+      <label for="check" class="burger-button"
+        ><i class="fa-solid fa-bars"></i
+      ></label>
+
       <label for="logo" class="logo">FoodFest</label>
       <img src="Images/Seren's Character.png" id="logo" />
       <ul>
