--- a/CSS/index.html
+++ b/CSS/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Seren's Portfolio Webpage</title>
+    <link rel="stylesheet" href="normalize.css" />
     <meta name="=author" content="Seren Mafunda" />
     <meta
       name="description"
