trying to get css changes to show up on my website

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Seren's Portfolio Webpage</title>
-    <link rel="stylesheet" href="/Styles/normalize.css" />
-    <link rel="stylesheet" href="/Styles/style.css" />
+    <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="style.css" />
     <meta name="=author" content="Seren Mafunda" />
     <meta
       name="description"
