--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       name="description"
       content="A website developed for a class assignment to build my skills as a web designer."
     />
-    <link rel="stylesheet" href="/Styles/normalize.css" />
-    <link rel="stylesheet" href="/Styles/style.css" />
+    <link rel="stylesheet" href="./Styles/normalize.css" />
+    <link rel="stylesheet" href="./Styles/style.css" />
   </head>
 
   <body>
