Changed the font colour to yellow, relocated the header to after the nav bar, added a background to the nav bar

--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
       name="description"
       content="A website developed for a class assignment to build my skills as a web designer."
     />
-    <link rel="stylesheet" href="../DIGA3008/Styles/normalize.css" />
-    <link rel="stylesheet" href="../DIGA3008/Styles/style.css" />
+    <link rel="stylesheet" href="/Styles/normalize.css" />
+    <link rel="stylesheet" href="/Styles/style.css" />
   </head>
 
   <body>
-    <header class="page-header"><h1>Welcome To Seren's Website</h1></header>
-
     <nav>
+      <label for="logo" class="logo">Star Child</label>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="Blogs/BlogHomePage.html">Blogs</a></li>
@@ -25,6 +24,9 @@
         <li><a href="Essays/Essays.html">Essays</a></li>
       </ul>
     </nav>
+
+    <header class="page-header"><h1>Welcome To Seren's Website</h1></header>
+
     <main>
       <h2>About Me!</h2>
       <img
