navigation bar, menu icon, logo, and colour scheme

--- a/index.html
+++ b/index.html
@@ -11,17 +11,27 @@
     />
     <link rel="stylesheet" href="/Styles/normalize.css" />
     <link rel="stylesheet" href="/Styles/style.css" />
+    <script
+      src="https://kit.fontawesome.com/dbf0b8b048.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
     <nav>
+      <input type="checkbox" id="check" />
+      <label for="check" class="menu-icon"
+        ><i class="fa-solid fa-bars"></i
+      ></label>
+
       <label for="logo" class="logo">Star Child</label>
+      <img src="Styles/images/nobackgroundstar.png" id="logo" />
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="Blogs/BlogHomePage.html">Blogs</a></li>
-        <li><a href="Design/Design.html">Design</a></li>
-        <li><a href="Portfolio/Portfolio.html">Portfolio</a></li>
-        <li><a href="Essays/Essays.html">Essays</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="Blogs/BlogHomePage.html" class="active">Blogs</a></li>
+        <li><a href="Design/Design.html" class="active">Design</a></li>
+        <li><a href="Portfolio/Portfolio.html" class="active">Portfolio</a></li>
+        <li><a href="Essays/Essays.html" class="active">Essays</a></li>
       </ul>
     </nav>
 
