Starry Background, Rounded Image, centered texts, and a trade marked footer

--- a/index.html
+++ b/index.html
@@ -27,35 +27,30 @@
       <label for="logo" class="logo">Star Child</label>
       <img src="Styles/images/nobackgroundstar.png" id="logo" />
       <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="Blogs/BlogHomePage.html" class="active">Blogs</a></li>
-        <li><a href="Design/Design.html" class="active">Design</a></li>
-        <li><a href="Portfolio/Portfolio.html" class="active">Portfolio</a></li>
-        <li><a href="Essays/Essays.html" class="active">Essays</a></li>
+        <li><a href="index.html" class="active">Home &#9956 </a></li>
+        <li><a href="Blogs/BlogHomePage.html" class="active">Blogs &#9956 </a></li>
+        <li><a href="Design/Design.html" class="active">Design &#9956 </a></li>
+        <li><a href="Portfolio/Portfolio.html" class="active">Portfolio &#9956 </a></li>
+        <li><a href="Essays/Essays.html" class="active">Essays &#9956 </a></li>
       </ul>
     </nav>
 
-    <header class="page-header"><h1>Welcome To Seren's Website</h1></header>
+    <header class="page-header"><h1>WELCOME TO SEREN'S WEBSITE</h1></header>
 
     <main>
-      <h2>About Me!</h2>
+      <!--<h2>My Name is Seren</h2>-->
       <img
         class="u-photo"
-        src="Images/PicCrewImage(Seren).png"
+        src="Styles/images/PicrewProfilePicture.png"
         alt="Image of the creator of website"
-        width="500"
-        height="500"
+        width="320"
+        height="320"
       />
-      <h2>My Name is Seren</h2>
-      <p>
-        My name is Seren, I'm a Digital Arts student majoring in Animation,
-        Writing and Interactive Media. I hope you enjoy getting to know more
-        about me through this webiste!
-      </p>
+      <h2>You've landed on my page</h2>
     </main>
 
     <footer>
-      <p>Proudly Brought to you By Seren Mafunda 2025</p>
+      <p>if you get lost, Seren will direct you to the nearest star &copy; </p>
     </footer>
   </body>
 </html>
