Blog Page Nav bar, logo and logo imagee

--- a/Blogs/BlogHomePage.html
+++ b/Blogs/BlogHomePage.html
@@ -6,12 +6,16 @@
     <title>All my Blogs on one page</title>
     <meta name="=author" content="Seren Mafunda" />
     <meta name="description" content="Blog Home Page for DIGA3008." />
+    <link rel="stylesheet" href="/Styles/normalize.css">
+    <link rel="stylesheet" href="blog.css">
   </head>
 
   <body>
     <section>
       <head>
         <nav>
+          <label for="logo" class="logo">Star Child</label>
+          <img src="/Styles/images/nobackgroundstar.png" id="starlogo" />
           <li><a href="../index.html">Home</a></li>
           <li><a href="../Blogs/BlogHomePage.html">Blogs</a></li>
           <li><a href="../Essays/Essays.html">Essay</a></li>
@@ -20,13 +24,13 @@
         </nav>
       </head>
       <header class="page header"><h2>Weekly Blog Posts</h2></header>
-      <nav>
+      
         </ul>
           <li><a href="Week1-BlogPost.html">Week 1 Blog Post</a></li>
           <li><a href="Week2-BlogPost.html">Week 2 Blog Post</a></li>
           <li><a href="Week 3-BlogPost.html">Week 3 Blog Post</a></li>
           <li><a href="Week 4-BlogPost.html">Week 4 Blog Post</a></li>
-        </ul>
+      
       </nav>
     </section>
   </body>
