Blog Page menu button, and blog page header (also tweaking the nav bar so it is cohesive to hompeage)

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       ></label>
 
       <label for="logo" class="logo">Star Child</label>
-      <img src="Styles/images/nobackgroundstar.png" class="logo" />
+      <img src="Styles/images/nobackgroundstar.png" class="starlogo" />
       <ul>
         <li><a href="index.html" class="active">Home &#9956 </a></li>
         <li><a href="Blogs/BlogHomePage.html" class="active">Blogs &#9956 </a></li>
